styles/style.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html {
  font-family: "Inter", serif;
  font-optical-sizing: auto;
  color: #050038;
}

.expandable-nav {
  display: flex;
  gap: 0.5rem;
}

.expandable-nav::after {
  content: url(../images/down-arrow.svg);
  display: block;
  clear: both;
}

.container {
  @apply desktop-small:mx-auto px-4 desktop-small:px-0 max-w-screen-desktop-small flex flex-col;
}

.list-check {
  @apply text-on-surface text-lg flex flex-col gap-4;
}

.list-check > li {
  @apply flex gap-2;
}

.list-check > li::before {
  content: url(../images/check.svg);
  display: inline-block;
  color: black;
  margin-right: 0.5rem;
}

.grid-container {
  @apply grid grid-flow-row sm:grid-cols-3 grid-cols-1 max-w-screen-desktop-small mx-auto sm:p-0 px-4;
}

.grid-container > div {
  @apply flex flex-col gap-8 items-center text-center;
}

details {
  @apply border-b-[1px] border-[#E5ECF4] py-4;
}
details > * {
}
details > div {
  @apply text-base leading-8 text-[#343D48];
}
summary {
  @apply text-lg leading-[1.875rem] font-medium cursor-pointer flex flex-row gap-4 items-center;
}

details > div {
  @apply ml-10 mt-2;
}

summary::marker {
  content: "";
}

details summary::before {
  content: "+";
  @apply bg-[#b58569] text-2xl rounded-full w-6 h-6 flex items-center justify-center text-white;
}

details[open] summary::before {
  content: "-";
}

.email-subscribe {
  box-shadow: 0px 10px 100px rgba(0, 0, 0, 0.14);
  @apply flex flex-row my-[5.25rem] p-2 bg-white rounded-[0.25rem] justify-between;
}

input[type="radio"] {
  appearance: none;
  width: 23px;
  height: 23px;
  border-radius: 50%;
  background-clip: content-box;
  background-color: #cfd7fe;
}

input[type="radio"]:checked {
  background-color: #cfd7fe;
  border: 0px solid #cfd7fe;
  display: flex;
  align-items: center;
  justify-content: center;
}

input[type="radio"]:checked::before {
  content: "";
  display: block;
  width: 17px;
  height: 17px;
  border-radius: 50%;
  background-color: #4262ff;
}

input[type="checkbox"] {
  appearance: none;
  width: 23px;
  height: 23px;
  border-radius: 0.25rem;
  background-clip: content-box;
  border: none;
  background-color: #cfd7fe;
}

input[type="checkbox"]:checked {
  background-color: #4262ff;
  border: none;
}

input[type="checkbox"]:checked::before {
  content: "✔";
  text-align: center;
  color: white;
  display: block;
  width: 23px;
  height: 23px;
  border-radius: 0.25rem;
  background-color: #4262ff;
}

